tests/positive/basic/trunc_integer/input.ci
void main() { print(toString(trunc(3.0)) + "\n"); }
