tests/negative/semantic/wrong_arg_count_writelines/input.ci
void main() {
    print(toString(writeLines("x")) + "\n");
}
